# MCP-Sentinel

./: .gitignore  README.md  ROADMAP.md  mcp-sentinel-spec-.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/mcp_sentinel/: __init__.py  cli.py  exfil_sink.py  models.py  sandbox.py  schema_analyzer.py  test_runner.py
tests/fixtures/evil_server/: Dockerfile  server.py
tests/fixtures/good_server/: Dockerfile  server.py
tests/integration/: test_sandbox_mode.py  test_schema_mode.py
tests/unit/: test_exfil_sink.py  test_models.py  test_schema_analyzer.py
